[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/24_no_outline.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/stretchable_button_hover.tres" type="StyleBox" id=2]
[ext_resource path="res://UI/stretchable_button.tres" type="StyleBox" id=3]
[ext_resource path="res://UI/stretchable_button_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Sprites/star_empty.png" type="Texture" id=5]
[ext_resource path="res://UI/LevelButton.gd" type="Script" id=6]

[node name="LevelButton" type="Button"]
margin_right = 128.0
margin_bottom = 128.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 2 )
custom_styles/disabled = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_top = -16.0
margin_right = 128.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )
text = "01"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Star1" type="Sprite" parent="."]
position = Vector2( 24, 96 )
texture = ExtResource( 5 )

[node name="Star2" type="Sprite" parent="."]
position = Vector2( 64, 80 )
texture = ExtResource( 5 )

[node name="Star3" type="Sprite" parent="."]
position = Vector2( 104, 96 )
texture = ExtResource( 5 )
[connection signal="pressed" from="." to="." method="_on_Level_pressed"]
